test/fail/float_cast03.v3
//@execute 2147483647=!TypeCheckException
var y: float;
def main(a: int) -> int {
	var x = float.!(a);
	return 0;
}
